--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,35 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
 }
-
-.App-link {
-  color: #61dafb;
+.App h2 {
+  margin-bottom: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.selector {
+  margin-bottom: 10px;
+}
+.table table tr {
+  color: #666;
+}
+.table table td {
+  text-align: center;
+  padding: 5px 30px;
+  color: #aaa;
+  background-color: #efefef;
+  border: solid 1px white;
+}
+.table table tr:hover td:nth-child(1) {
+  color: #666;
+  background-color: #d9d0e6;
+}
+.table table tr:hover td:nth-child(2) {
+  color: #666;
+  background-color: #e3d0e6;
+}
+.table table tr:hover td:nth-child(3) {
+  color: #666;
+  background-color: #eed2f5;
 }
